# chatbot

./: .all-contributorsrc  .env.example  .envrc  .gitattributes  .gitignore  .pr_agent.toml  .pre-commit-config.yaml  .tool-versions  CHANGELOG.backup.md  CHANGELOG.md  CODE_OF_CONDUCT.md  EzHR-Chatbot.dbml  Makefile  Pipfile  README.md  app.conf  app.template.conf  app.template.no-letsencrypt.conf  docusaurus.config.ts  package-lock.json  package.json  ruff.toml  sidebars.ts
backend/: .gitignore  CHANGELOG.md  Dockerfile  README.md  alembic.ini  main.py  pyproject.toml  settings.py
backend/alembic/: env.py
backend/alembic/versions/: 0e8338e6a569_add_table_embedding_provider.py  2506f01082d2_add_table_document_metadata.py  36e9e94abfc0_add_foreign_from_chat_session_to_folder.py  3ddac298fb73_add_foreign_from_chat_session_to_user.py  46fc46c959c4_add_foreign_from_document_metadata_to_.py  4dd998601576_modify_column_primary_owners_to_be_.py  5a6605ebe3c9_add_foreign_from_folder_to_user.py  5da9aba17cb5_add_columns_in_table_user_with_schema_.py  6341eaa1d364_add_foreign_from_chat_message_to_agent.py  637ab9958b11_add_table_chat_message.py  674e15c976a8_add_table_chat_feedback_with_.py  6e3de72aa2c0_add_foreign_from_agent_to_user.py  71a88f740b61_add_table_llm_provider.py  89fb492b1e99_remove_unused_column_link_in_document_.py  8c6277a018a4_connector_related_logic_refactor.py  92a9ffaf27e3_add_table_document_metadata_tag.py  989953ae75e5_remove_column_display_priority_in_table_.py  a2b035522b2d_add_missing_document_url_field_for_.py  a51a76136ba9_remove_agent_id_from_table_chat_message.py  a9732deb4d02_add_table_folder.py  c2dc180ed8a7_add_foreign_from_chat_message_to_chat_.py  c48653da954b_modify_column_type_for_storing_vietnamese_text.py  cb1bf6e87a3e_remove_column_deleted_at_in_table_user.py  cfb28202c9f8_add_table_start_message_with_.py  d09ec0a7b6af_add_table_user_settings.py  dc5a2749e3af_modify_column_last_synced_at_to_nullable.py  df3f06ba3fbd_add_table_agent.py  e16788f843d0_add_foreign_from_chat_session_to_agent.py  e718b2006054_add_table_connector.py  ebb186ceff2c_add_table_user.py  f7c3dc060944_add_table_chat_session.py
backend/app/: main.py  main_router.py
backend/app/background/: helpers.py  utils.py
backend/app/background/configs/: base.py
backend/app/background/tasks/: indexing.py
backend/app/databases/: base.py  minio.py  mssql.py  qdrant.py  redis.py
backend/app/exception/: auth_exceptions.py  base_exceptions.py  chatbot_exceptions.py  database_exceptions.py  request_exceptions.py  server_exceptions.py
backend/app/exception/utils/: error_code.py  message_utils.py
backend/app/models/: __init__.py  base.py  chat.py  connector.py  document.py  folder.py
backend/app/repositories/: agent.py  base.py  connector.py  document.py  user.py
backend/app/routers/: auth.py
backend/app/routers/v1/: agent.py  background.py  connector.py  document.py  folder.py  user.py
backend/app/services/: agent.py  chat.py  connector.py  document.py  provider.py  user.py
backend/app/settings/: constants.py  exception_constants.py  secrets.py
backend/app/utils/: file.py  string.py
backend/app/utils/api/: api_response.py  helpers.py
backend/app/utils/llm/: helpers.py
backend/app/utils/user/: authentication.py  jwt.py  uuid.py
backend/databases/: postgres.py
backend/models/: api.py  embedding_model.py  error.py
backend/notebooks/: POC1.ipynb  docstore.ipynb
backend/repositories/: embeding_model.py
backend/routers/: base.py
backend/routers/v1/: embedding_model.py
backend/services/: embedding_model.py
backend/tests/: utils.py
backend/tests/unit/storage/: mssql.py  qdrant.py  redis.py
backend/utils/: api_response.py  create_api_response.py  error_handler.py  logger.py
chatbot-core/: .env.example  .envrc.sample  EzHR-Chatbot.dbml  Makefile  Pipfile  README.md  pyproject.toml
chatbot-core/backend/: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt
chatbot-core/backend/alembic/: env.py
chatbot-core/backend/alembic/versions/: 0e8338e6a569_add_table_embedding_provider.py  2506f01082d2_add_table_document_metadata.py  341c842ddd38_init_database.py  36e9e94abfc0_add_foreign_from_chat_session_to_folder.py  3ddac298fb73_add_foreign_from_chat_session_to_user.py  46fc46c959c4_add_foreign_from_document_metadata_to_.py  4dd998601576_modify_column_primary_owners_to_be_.py  5a6605ebe3c9_add_foreign_from_folder_to_user.py  5da9aba17cb5_add_columns_in_table_user_with_schema_.py  6341eaa1d364_add_foreign_from_chat_message_to_agent.py  637ab9958b11_add_table_chat_message.py  674e15c976a8_add_table_chat_feedback_with_.py  6e3de72aa2c0_add_foreign_from_agent_to_user.py  6ff7845f48a3_alter_related_connector_and_document_.py  71a88f740b61_add_table_llm_provider.py  75df014606e4_modify_column_type_for_handling_storing_.py  89fb492b1e99_remove_unused_column_link_in_document_.py  92a9ffaf27e3_add_table_document_metadata_tag.py  989953ae75e5_remove_column_display_priority_in_table_.py  a2b035522b2d_add_missing_document_url_field_for_.py  a51a76136ba9_remove_agent_id_from_table_chat_message.py  a9732deb4d02_add_table_folder.py  afc5e773d532_remove_self_foreign_keys_in_table_chat_.py  (+17 more)
chatbot-core/backend/app/: main.py  main_router.py  seeds.py  settings.py
chatbot-core/backend/databases/: postgres.py
chatbot-core/backend/notebooks/: POC1.ipynb  chat.ipynb  docstore.ipynb
chatbot-core/backend/repositories/: embeding_model.py
chatbot-core/backend/services/: embedding_model.py
chatbot-core/backend/tests/: utils.py
chatbot-core/backend/utils/: api_response.py  logger.py
chatbot-core/frontend/: .env.example  .eslintrc.json  .gitignore  Dockerfile  README.md  dev.Dockerfile  i18n.js  next.config.js  next.config.mjs  package-lock.json  package.json  sentry.edge.config.ts  tailwind.config.js
chatbot-core/frontend-v2/: .env.example  .eslintrc.json  Dockerfile  package.json  tailwind.config.ts
chatbot-core/frontend/src/: middleware.ts
chatbot-core/notebooks/POC1/: POC1.ipynb  test-question-and-answer.ipynb
(+1033 files in other folders)
