[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[project]
authors = [
  { name = "lelouvincx", email = "dinhminhchinh3357@gmail.com" },
  { name = "tuantran0910" },
  { name = "greyyT" },
]
name = "backend"
version = "1.0.0"
description = "FastAPI based backend for the project EzHR Chatbot."
readme = "README.md"
requires-python = ">=3.11"
keywords = ["sample", "hatchling", "development"]

dependencies = [
  "fastapi[standard]",
  "uvicorn==0.23.2",
  "llama-index>=0.12.14",
  "llama-index-vector-stores-qdrant>=0.4.0",
  "llama-index-storage-chat-store-redis>=0.4.0",
  "llama-index-storage-kvstore-redis>=0.3.0",
  "redis>=5.2.0",
  "fastembed>=0.4.2",
  "pdfplumber>=0.11.4",
  "qdrant-client>=1.12.1",
  "minio>=7.2.12",
  "pyodbc>=5.2.0",
  "sqlalchemy[asyncio]>=2.0.36",
  "pydenticon>=0.3.1",
  "python-multipart>=0.0.17",
  "alembic>=1.14.0",
  "llama-index-embeddings-gemini>=0.3.0",
  "llama-index-embeddings-openai>=0.3.1",
  "llama-index-llms-gemini>=0.4.2",
  "llama-index-llms-openai>=0.3.14",
  "markitdown>=0.0.1a3",
  "pyjwt>=2.10.1",
  "aioodbc>=0.5.0",
  "docker>=7.1.0",
  "pydantic==2.9",
  "pytest-asyncio>=0.25.2",
  "llama-index-llms-cohere>=0.4.0",
  "llama-index-embeddings-cohere>=0.4.0",
  "sse-starlette>=2.2.1",
  "pydantic-settings>=2.7.1",
  "celery>=5.4.0",
  "spacy>=3.8.4",
]

[project.optional-dependencies]
dev = ["check-manifest", "pyright", "ruff", "black"]
test = ["pytest", "coverage"]

[project.scripts]
main = "app:main"

[tool.hatch.build.targets.sdist]
include = ["app"]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.semantic_release]
version_variable = "app/__init__.py:__version__"
branch = "main"
upload_to_pypi = false
changelog_file = "CHANGELOG.md"

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = ["*/migrations/*", "*/alembic/*", "*/__init__.py", "backend.egg-info"]
extend-exclude = ["*.ipynb"]
indent-width = 4

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["F"]
ignore = ["W", "F401"]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

[tool.pyright]
typeCheckingMode = "off"

[tool.black]
line-length = 100
extend-exclude = ""

[tool.pytest.ini_options]
# Ignore specific test files or directories
# addopts = "--ignore=path/to/test_file.py --ignore=path/to/another_test_file.py"

# Enable verbose output
testpaths = ["tests"] # Specify directories where tests are located
python_files = ["test_*.py", "*_test.py"] # Test file pattern
python_classes = ["Test*"] # Class names to consider as tests
python_functions = ["test_*"] # Function names to consider as tests
filterwarnings = [
  "error",
  "ignore::UserWarning",
  # note the use of single quote below to denote "raw" strings in TOML
  'ignore:.*U.*mode is deprecated:DeprecationWarning',
]
asyncio_default_fixture_loop_scope = "function"

[dependency-groups]
dev = [
  "pytest-coverage>=0.0",
  "pytest>=8.3.3",
  "commitizen>=4.0.0",
  "ipykernel>=6.29.5",
  "pre-commit>=4.1.0",
  "pip>=25.0.1",
  "matplotlib>=3.10.0",
]
